--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-us.ryanhope.wircd*
-!upstart/us.ryanhope.wircd
-libircclient/autom4te.cache
-libircclient/config.log
-libircclient/config.status
-libircclient/src/Makefile
+us.ryanhope.freetetherd*
 *.o
 *.a
 *.eg
