--- a/.cproject
+++ b/.cproject
@@ -65,8 +65,10 @@
 <listOptionValue builtIn="false" value="/usr/lib/gcc/i686-pc-linux-gnu/4.4.2/include"/>
 <listOptionValue builtIn="false" value="/home/rmh3093/workspace/webosinternals/wIRCd/libircclient/include"/>
 </option>
-<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.1064691583" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
+<option id="org.eclipse.cdt.build.core.settings.holder.incpaths.1064691583" name="Include Paths" superClass="org.eclipse.cdt.build.core.settings.holder.incpaths" valueType="includePath">
 <listOptionValue builtIn="false" value="/usr/armv7l-softfloat-linux-gnueabi/usr/include"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/freeTetherD/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/freeTetherD/net-lib}&quot;"/>
 </option>
 <inputType id="org.eclipse.cdt.build.core.settings.holder.inType.300096602" languageId="org.eclipse.cdt.core.gcc" languageName="GNU C" sourceContentType="org.eclipse.cdt.core.cSource,org.eclipse.cdt.core.cHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 </tool>
